[tool.poetry]
name = "t-wave"
version = "0.1.0"
description = ""
authors = ["t-qard <t-qard@users.noreply.github.com>"]
license = ""

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
jupyter-book = "^0.11.3"
ghp-import = "^2.0.1"
numpy = "^1.21.5"
matplotlib = "^3.5.1"
pandas = "^1.3.5"
dwave-ocean-sdk = "^4.3.0"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
ipykernel = "^6.4.2"
jupyterlab = "^3.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
